Change testimonial sizes to percentage to fix the appearance on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,9 +150,9 @@ h1 {
 }
 
 .test-box img {
-    height: 200px;
-    width: 200px;
-    border-radius: 100px;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
     margin-bottom: 20px;
 }
 
